@@ -1,3 +1,11 @@
+2005-12-01  Daniel Steffen  <das@users.sourceforge.net>
+
+	* unix/tcl.m4 (Darwin): fixed error when MACOSX_DEPLOYMENT_TARGET unset.
+	* unix/configure: regen.
+
+	* macosx/tkMacOSXCarbonEvents.c (TkMacOSXInitCarbonEvents): added newly
+	registered kEventAppAvailableWindowBoundsChanged to debugging code.
+
 2005-11-30  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* win/Makefile.in: place TCL_BIN_DIR first in PATH for targets to
